temp fix for pb underneath overlap with red raindrop

--- a/client/Components/GameBoard/Card.scss
+++ b/client/Components/GameBoard/Card.scss
@@ -293,14 +293,14 @@
 }
 
 .underneath {
-    margin-left: 0;
+    margin-left: 15px;
     position: relative;
     z-index: $layer-cards - 1;
 
     margin-top: $underneath-offset - $keyteki-card-height;
 
     &.small {
-        margin-top: $underneath-offset - $keyteki-card-sm-height;
+        margin-top: $underneath-offset-sm - $keyteki-card-sm-height;
     }
 
     &.large {
